--- a/weather/docker-compose.yml
+++ b/weather/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - '3000:3000'
         links:
             - influxdb
-        image: grafana/grafana
+        image: grafana/grafana:master
 
     influxdb:
         container_name: influxdb
