--- a/sht31/sht31-influxdb/Dockerfile
+++ b/sht31/sht31-influxdb/Dockerfile
@@ -8,9 +8,13 @@ RUN apt-get update \
     python3-setuptools \
     python3-influxdb \
     wait-for-it \
+    python3-pip \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 COPY sht31module sht31module
 RUN  cd sht31module && python3 setup.py install
 
 COPY sht31-influxdb.py /usr/bin
+
+RUN pip3 install pyserial pynmea2
+COPY gps/gps.py /usr/bin
