Use fixed release tag for external containers
Using fixed release will avoid that changes in those external
compones will break our sample code.

Related-to: TOR-801
Signed-off-by: Valter Minute <valter.minute@toradex.com>

--- a/gpioinfluxdb/appconfig_0/docker-compose.yml
+++ b/gpioinfluxdb/appconfig_0/docker-compose.yml
@@ -1,28 +1,28 @@
-version: '2.4'
+version: "2.4"
 services:
   influxdb:
     container_name: influxdb
     networks:
-          - backend
+      - backend
     volumes:
-          # create a persistent volume for InfluxDB's data:
-          - /home/torizon/influxdb/data:/var/lib/influxdb
-          # mount our configuration file:
-          - /home/torizon/influxdb/influxdb.conf:/etc/influxdb/influxdb.conf:ro
-    image: influxdb
+      # create a persistent volume for InfluxDB's data:
+      - /home/torizon/influxdb/data:/var/lib/influxdb
+      # mount our configuration file:
+      - /home/torizon/influxdb/influxdb.conf:/etc/influxdb/influxdb.conf:ro
+    image: influxdb:1.7.10
 
   grafana:
     container_name: grafana
     volumes:
-          # store Grafana's configuration:
-          - 'grafana-storage:/var/lib/grafana'
-    networks: 
-          - backend
-          - frontend
+      # store Grafana's configuration:
+      - "grafana-storage:/var/lib/grafana"
+    networks:
+      - backend
+      - frontend
     ports:
-          # expose default web server port:
-          - '3000:3000'
-    image: grafana/grafana:master
+      # expose default web server port:
+      - "3000:3000"
+    image: grafana/grafana:6.7.1
 
 volumes:
   grafana-storage:
