--- a/weather/docker-compose.yml
+++ b/weather/docker-compose.yml
@@ -1,46 +1,46 @@
-version: '2.4'
+version: "2.4"
 services:
-    grafana:
-        container_name: grafana
-        depends_on:
-            - influxdb
-        networks:
-            - backend
-            - frontend
-        volumes:
-            - 'grafana-storage:/var/lib/grafana'
-        ports:
-            - '3000:3000'
-        links:
-            - influxdb
-        image: grafana/grafana:master
+  grafana:
+    container_name: grafana
+    depends_on:
+      - influxdb
+    networks:
+      - backend
+      - frontend
+    volumes:
+      - "grafana-storage:/var/lib/grafana"
+    ports:
+      - "3000:3000"
+    links:
+      - influxdb
+    image: grafana/grafana:6.7.1
 
-    influxdb:
-        container_name: influxdb
-        networks:
-            - backend
-        volumes:
-            - 'influxdb-grafana:/var/lib/influxdb'
-        image: influxdb
+  influxdb:
+    container_name: influxdb
+    networks:
+      - backend
+    volumes:
+      - "influxdb-grafana:/var/lib/influxdb"
+    image: influxdb:1.7.10
 
-    weather:
-        build:
-            context: .
-            args:
-                IMAGE_ARCH: arm32v7
-                TOOLCHAIN_ARCH: armhf
-                PKG_ARCH: armhf
-        container_name: weather
-        depends_on:
-            - influxdb
-        networks:
-            - backend
-            - frontend
+  weather:
+    build:
+      context: .
+      args:
+        IMAGE_ARCH: arm32v7
+        TOOLCHAIN_ARCH: armhf
+        PKG_ARCH: armhf
+    container_name: weather
+    depends_on:
+      - influxdb
+    networks:
+      - backend
+      - frontend
 
 networks:
   backend:
     internal: true
-  frontend:   
+  frontend:
     internal: false
 
 volumes:
