debian-container: kiosk: disable seccomp
Disable seccomp for kiosk chromium container, this
fixes a following runtime issue:
| Failed to move to new namespace: PID namespaces supported,
| Network namespace supported,
| but failed: errno = Operation not permitted

Related-to: TOR-742
Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -47,6 +47,8 @@ services:
 
   kiosk:
     image: torizon/arm64v8-debian-kiosk-mode-browser:latest
+    security_opt:
+      - seccomp:unconfined
     command: --window-mode http://portainer:9000
     shm_size: 256mb
     volumes:
