--- a/python-qml/Dockerfile
+++ b/python-qml/Dockerfile
@@ -3,7 +3,19 @@ FROM torizon/$IMAGE_ARCH-debian-qt5-wayland:buster
 
 ARG APPNAME=show_readings.py
 
-RUN apt-get update && apt-get install -y --no-install-recommends python3 qml-module-qtquick-controls qml-module-qtquick-controls2 qml-module-qtquick2 python3-pyside2.qtwidgets python3-pyside2.qtgui python3-pyside2.qtqml python3-pyside2.qtcore python3-pyside2.qtquick python3-pyside2.qtnetwork qml-module-qtquick-dialogs && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    qml-module-qtquick2 \
+    qml-module-qtquick-controls \
+    qml-module-qtquick-controls2 \
+    qml-module-qtquick-dialogs \
+    python3-pyside2.qtcore \
+    python3-pyside2.qtquick \
+    python3-pyside2.qtwidgets \
+    python3-pyside2.qtgui \
+    python3-pyside2.qtqml \
+    python3-pyside2.qtnetwork \
+    && rm -rf /var/lib/apt/lists/*
  
 WORKDIR /
 
