gps: dotnet: blazor: Remove blazor network
This network entry is not necessary and causes an error because it was
never created and does not exist, so removing it.

Signed-off-by: Matheus Castello <matheus.castello@toradex.com>

--- a/gps/dotnet/blazor/appconfig_0/config.yaml
+++ b/gps/dotnet/blazor/appconfig_0/config.yaml
@@ -17,8 +17,7 @@ images:
     release: ''
 modificationdate: '2020-05-19T15:32:32.568151'
 networks:
-    common:
-    - blazor
+    common: []
     debug: []
     release: []
 platformid: arm32v7-debian-aspdotnet_buster
