sht31 & grafana: disable seccomp
Disable seccomp for kiosk chromium container in sht31 and grafana sample.

Related-to: TOR-1172
Signed-off-by: Dejan Jesenko <dejan.jesenko@toradex.com>

--- a/grafana/docker-compose.override.yml
+++ b/grafana/docker-compose.override.yml
@@ -42,6 +42,8 @@ services:
     # For i.MX 8-based modules use this image:
     image: torizon/arm64v8-debian-kiosk-mode-browser:latest
     command: --window-mode http://grafana:3000
+    security_opt:
+      - seccomp:unconfined    
     networks:
       - frontend
     volumes:
