--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -5,7 +5,7 @@ services:
     # please uncomment the following two lines to accept the
     # EULA required to run imx8 vivante graphic drivers
     #environment:
-    # - -ACCEPT_FSL_EULA=1
+    # - ACCEPT_FSL_EULA=1
     # Required to get udev events from host udevd via netlink
     network_mode: host
     volumes:
