update containers to the new naming/tagging convention
Update Dockerfiles to use multiarch images and the new naming/tagging convention.

Related-to: TOR-1379
Signed-off-by: Dejan Jesenko <dejan.jesenko@toradex.com>

--- a/adc/Dockerfile
+++ b/adc/Dockerfile
@@ -1,8 +1,10 @@
 ARG IMAGE_ARCH=arm32v7
 ARG CROSS_TC_IMAGE_ARCH=armhf
+ARG ARCH_ARG=linux/arm
+ARG IMAGE_TAG=1-buster
 
 # First stage, x86_64 build container
-FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH AS cross-container
+FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:1 AS cross-container
 
 # copy project source
 WORKDIR /project
@@ -14,7 +16,7 @@ RUN mkdir build && cd build \
     ../iio_utils.c ../adc.c
 
 # Second stage, container for target
-FROM torizon/$IMAGE_ARCH-debian-base AS deploy-container
+FROM --platform=$ARCH_ARG torizon/debian:$IMAGE_TAG AS deploy-container
 
 # get the compiled program from the Build stage
 COPY --from=cross-container /project/build/* /usr/local/bin/
