--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,4 +1,5 @@
-FROM torizon/arm32v7-debian-base
+ARG IMAGE_TAG=1-buster
+FROM --platform=linux/arm torizon/debian:$IMAGE_TAG
 RUN apt-get -y update && apt-get install -y \
     collectd \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
