--- a/python-qml/Dockerfile
+++ b/python-qml/Dockerfile
@@ -1,9 +1,10 @@
-# Choose IMAGE_ARCH either "arm32v7" or "arm64v8"
-ARG IMAGE_ARCH=arm32v7
-# Either leave MODULES_VIVANTE empty or set it to "-vivante"
-# which is the suffix for both the Docker image as well as Debian packages
-ARG MODULES_VIVANTE
-FROM torizon/$IMAGE_ARCH-debian-qt5-wayland$MODULES_VIVANTE:buster
+ARG IMAGE_ARCH=linux/arm
+# For arm64 use:
+# ARG IMAGE_ARCH=linux/arm64
+ARG IMAGE_NAME=qt5-wayland
+# For arm64 with Vivante use:
+# ARG IMAGE_NAME=qt5-wayland-vivante
+FROM --platform=$IMAGE_ARCH torizon/$IMAGE_NAME:1
 
 ARG APPNAME=show_readings.py
 
