--- a/gpio/bash/Dockerfile.arm64
+++ b/gpio/bash/Dockerfile.arm64
@@ -1,4 +1,5 @@
-FROM torizon/arm64v8-debian-base
+ARG IMAGE_TAG=1-buster
+FROM --platform=linux/arm64 torizon/debian:$IMAGE_TAG
 
 RUN apt-get -y update && apt-get install -y \
     gpiod \
@@ -8,6 +9,6 @@ RUN apt-get -y update && apt-get install -y \
 RUN usermod -a -G gpio torizon
 
 # Add sample bash scripts for convenience
-COPY ./*.sh /usr/local/bin
+COPY ./*.sh /usr/local/bin/
 
 CMD [ "bash" ]
