--- a/gpio/c/Dockerfile.armhf
+++ b/gpio/c/Dockerfile.armhf
@@ -1,5 +1,6 @@
+ARG IMAGE_TAG=1-buster
 # First stage, x86_64 build container
-FROM torizon/debian-cross-toolchain-armhf AS cross-container
+FROM torizon/debian-cross-toolchain-armhf:1 AS cross-container
 
 # install the libpiod development dependencies
 RUN apt-get -y update && apt-get install -y \
@@ -17,7 +18,7 @@ RUN mkdir build && cd build \
     && arm-linux-gnueabihf-gcc -o gpio-event ../gpio-event.c -lgpiod
 
 # Second stage, arm32v7 container for target
-FROM torizon/arm32v7-debian-base AS deploy-container
+FROM --platform=linux/arm torizon/debian:$IMAGE_TAG AS deploy-container
 
 # To run examples we only need the libgpiod2 library. The gpiod package can
 # be helpful for debugging.
