--- a/gps/dotnet/blazor/appconfig_0/docker-compose.arm32v7.yml
+++ b/gps/dotnet/blazor/appconfig_0/docker-compose.arm32v7.yml
@@ -4,7 +4,7 @@ services:
     environment:
       - ACCEPT_FSL_EULA=1
     container_name: weston
-    image: torizon/arm32v7-debian-weston
+    image: torizon/weston:1
     # Required to get udev events from host udevd via netlink
     network_mode: host
     volumes:
