--- a/grafana/docker-compose.override.yml
+++ b/grafana/docker-compose.override.yml
@@ -6,9 +6,9 @@ services:
       - ACCEPT_FSL_EULA=1
     container_name: weston
     # For armhf (i.MX 6- and i.MX 7-based modules) use this image:
-    #image: torizon/arm32v7-debian-weston:latest
+    #image: torizon/weston:1
     # For i.MX 8-based modules use this image:
-    image: torizon/arm64v8-debian-weston-vivante:latest
+    image: torizon/weston-vivante:1
     # Required to get udev events from host udevd via netlink
     network_mode: host
     volumes:
@@ -38,9 +38,9 @@ services:
   kiosk:
     container_name: kiosk
     # For armhf (i.MX 6- and i.MX 7-based modules) use this image:
-    #image: torizon/arm32v7-debian-kiosk-mode-browser:latest
+    #image: torizon/arm32v7-debian-kiosk-mode-browser:1
     # For i.MX 8-based modules use this image:
-    image: torizon/arm64v8-debian-kiosk-mode-browser:latest
+    image: torizon/arm64v8-debian-kiosk-mode-browser:1
     command: --window-mode http://grafana:3000
     security_opt:
       - seccomp:unconfined    
