--- a/gstreamer/bash/simple-pipeline/docker-compose.armhf.yaml
+++ b/gstreamer/bash/simple-pipeline/docker-compose.armhf.yaml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   weston:
-    image: torizon/arm32v7-debian-weston
+    image: torizon/weston:1
     # please uncomment the following two lines to accept the
     # EULA required to run imx8 vivante graphic drivers
     #environment:
