Add arm32v7 variables values

--- a/tflite/Dockerfile
+++ b/tflite/Dockerfile
@@ -1,7 +1,11 @@
 ARG ARCH_ARG=linux/arm64
+# For arm32 use:
+# ARG IMAGE_ARCH=linux/arm
 ARG PKG_ARCH=aarch64
+# For arm32v7 use: 
+# ARG PKG_ARCH=armv7l
 
-FROM --platform=$ARCH_ARG torizon/debian:1.0-buster
+FROM --platform=$ARCH_ARG torizon/debian:1-buster
 WORKDIR /home/torizon
 
 ARG PKG_ARCH
