Adapt samples/dbus/tools containers to Debian Bullseye
** Build the container **

$ ./build-container.sh
::1: forward host lookup failed:
squid-deb-proxy is not running, enable it if you want to cache packages used in containers.
exec docker build --rm --pull --no-cache -t dbus-tools:latest --build-arg APT_PROXY=$APT_PROXY_ARG .
Sending build context to Docker daemon  5.632kB
Step 1/9 : FROM --platform=linux/arm torizon/debian:2-bullseye
2-bullseye: Pulling from torizon/debian
Digest:
sha256:579b57ebf85c0aefecf3ef86382ba0dce309602a0e0eacd0161cb7b910bbc44c
Status: Image is up to date for torizon/debian:2-bullseye
 ---> b743542d2876
Step 2/9 : ARG APT_PROXY
 ---> Running in 20b3f5b207c0
Removing intermediate container 20b3f5b207c0
 ---> 3c3b8ff8ab14
Step 3/9 : RUN if [ "$APT_PROXY" != "" ]; then     echo
"Acquire::http::Proxy \"http://$APT_PROXY:8000\";" >
/etc/apt/apt.conf.d/30proxy ;    echo
"Acquire::http::Proxy::ppa.launchpad.net DIRECT;" >>
/etc/apt/apt.conf.d/30proxy ;     echo "squid-deb-proxy configured";
else     echo "no squid-deb-proxy configured";     fi
 ---> Running in 37c5ea89b9be
no squid-deb-proxy configured
Removing intermediate container 37c5ea89b9be
 ---> 970d404fe998
Step 4/9 : RUN apt-get -q -y update && apt-get -q -y --no-install-recommends install systemd dbus &&  rm -rf /var/lib/apt/lists/*
 ---> Running in 2b3aeb6f783a
Get:1 http://snapshot.debian.org/archive/debian/20200908T070000Z bullseye InRelease [116 kB]
Get:2 https://feeds.toradex.com/debian testing InRelease [13.0 kB]
Get:3 http://snapshot.debian.org/archive/debian/20200908T070000Z bullseye-updates InRelease [38.8 kB]
Get:4 http://snapshot.debian.org/archive/debian-security/20200908T070000Z bullseye-security InRelease [44.1 kB]
Get:5 http://snapshot.debian.org/archive/debian/20200908T070000Z bullseye/main armhf Packages [7490 kB]
Get:6 https://feeds.toradex.com/debian testing/main armhf Packages [10.5 kB]
Fetched 7713 kB in 8s (937 kB/s)
Reading package lists...
Reading package lists.

--- a/dbus/tools/Dockerfile
+++ b/dbus/tools/Dockerfile
@@ -1,5 +1,4 @@
-FROM arm32v7/debian:buster-slim
-
+FROM --platform=linux/arm torizon/debian:2-bullseye
 ARG APT_PROXY
 
 #if argument APT_PROXY is configured, it will be used to speed-up download of deb packages
@@ -17,7 +16,10 @@ RUN apt-get -q -y update && apt-get -q -y --no-install-recommends install system
 # remove proxy so container will run on any host
 RUN if [ "$APT_PROXY" != "" ]; then rm /etc/apt/apt.conf.d/30proxy; fi
 
-# remove those two statements if you want to run the tools as root
-# inside the container
-RUN useradd dbususer
+# run the tools as a dedicated user
+# remove if you want to run as root inside the container
+RUN useradd -m dbususer
 USER dbususer
+WORKDIR /home/dbususer
+
+CMD /bin/bash -l
