Accept FSL EULA by default in debian-container arm64
Related-to: TOR-1320
Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -5,8 +5,8 @@ services:
     image: torizon/weston-vivante:2
     # please uncomment the following two lines to accept the
     # EULA required to run imx8 vivante graphic drivers
-    #environment:
-    # - ACCEPT_FSL_EULA=1
+    environment:
+     - ACCEPT_FSL_EULA=1
     # Required to get udev events from host udevd via netlink
     network_mode: host
     volumes:
