Fix race condition between weston and kiosk containers in debian-container arm64
If weston takes a bit longer to start the graphical environment, the kiosk container crashes because chromium cannot start.
This patch adds a heath check verification in order to refrain the kiosk container to start before the graphical environment is up and running.

Related-to: TOR-1320
Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -34,6 +34,12 @@ services:
       - 'c 226:* rmw'
     scale: 1
     command: --developer weston-launch --tty=/dev/tty7 --user=torizon
+    healthcheck:
+        test: ["CMD", "test", "-S", "/tmp/.X11-unix/X0"]
+        interval: 5s
+        timeout: 4s
+        retries: 6
+        start_period: 10s
 
   portainer:
     image: portainer/portainer:latest
@@ -75,8 +81,10 @@ services:
         target: /dev/dri
     scale: 1
     depends_on:
-      - weston
-      - portainer
+      weston:
+        condition: service_healthy
+      portainer:
+        condition: service_started
 
 volumes:
   portainer_data:
