Update portainer admin initial password for debian-container arm64
Sample test in Apalis IMX8:

apalis-imx8-06548503:~$ uname -a
Linux apalis-imx8-06548503 5.4.47-5.0.0-devel+git.9e7307657fc1
aarch64 GNU/Linux

apalis-imx8-06548503:~$ docker-compose -f docker-compose.arm64.yml up
Creating torizon_weston_1    ... done
Creating torizon_portainer_1 ... done
Creating torizon_kiosk_1     ... done
Attaching to torizon_weston_1, torizon_portainer_1, torizon_kiosk_1
portainer_1  | 2020/10/05 17:44:57 Warning: the --template-file flag is
deprecated and will likely be removed in a future version of Portainer.
portainer_1  | 2020/10/05 17:44:58 Templates already registered inside
the database. Skipping template import.
weston_1     | NXP EULA has already been accepted.
portainer_1  | 2020/10/05 17:44:58 Instance already has defined
endpoints. Skipping the endpoint defined via CLI.
portainer_1  | 2020/10/05 17:44:58 Instance already has an administrator
user defined. Skipping admin password related flags.
portainer_1  | 2020/10/05 17:44:58 server: Reverse tunnelling enabled
portainer_1  | 2020/10/05 17:44:58 server: Fingerprint
f0:96:63:66:e6:bd:42:d1:e8:ff:00:79:dc:f1:37:8e
portainer_1  | 2020/10/05 17:44:58 server: Listening on 0.0.0.0:8000...
portainer_1  | 2020/10/05 17:44:58 Starting Portainer 1.24.1 on :9000
portainer_1  | 2020/10/05 17:44:58 [DEBUG] [chisel, monitoring]
[check_interval_seconds: 10.000000] [message: starting tunnel management
process]
weston_1     | SoC is: 'i.MX8QM'
weston_1     | SoC has GPU: true
weston_1     | SoC has DPU: true
weston_1     | g2d implementation: dpu
weston_1     | update-alternatives: using
/usr/lib/aarch64-linux-gnu/libg2d-dpu.so to provide
/usr/lib/aarch64-linux-gnu/libg2d.so.1.5 (libg2d.so.1.5) in manual mode
weston_1     | update-alternatives: using /opt/g2d_dpu_samples to
provide /opt/g2d_samples (g2d_samples) in manual mode
weston_1     | Switching to VT 7
weston_1     | NXP EULA has already been accepted.
weston_1     | touch: 

--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -43,8 +43,8 @@ services:
 
   portainer:
     image: portainer/portainer:latest
-    # default user/password is admin/toradex2019
-    command: -H unix:///var/run/docker.sock --admin-password '$$2y$$05$$w402JrBUfwXFzi50W7Rd5ulkiSFjTNZQhNrHCSQUWScRqF1qRU6li0' --logo 'https://developer.toradex.com/images/logo_toradex_header.png'
+    # default user/password is admin/toradex2020
+    command: -H unix:///var/run/docker.sock --admin-password '$$2y$$05$$lYD3omTmZ0c0jMDsNX6k8.GwS2NMHbbDzkMBWcDzBt6/K9EyuMPHi' --logo 'https://developer.toradex.com/images/logo_toradex_header.png'
     labels:
       - owner=acme
     network_mode: host
