Adapt debian-container armhf to Bullseye
- Safeguard against race condition between weston and kiosk containers
- Change initial portainer admin password to toradex2020

Execution sample in Colibri IX6:

colibri-imx6-10508300:~$ uname -a
Linux colibri-imx6-10508300 5.4.61-5.0.0-devel+git.26abb5b86e17
GNU/Linux
colibri-imx6-10508300:~$ docker-compose -f docker-compose.armhf.yml up
Creating torizon_portainer_1 ... done
Creating torizon_weston_1    ... done
Creating torizon_kiosk_1     ... done
Attaching to torizon_portainer_1, torizon_weston_1, torizon_kiosk_1
weston_1     | SoC is: 'i.MX6DL'
weston_1     | SoC has GPU: true
weston_1     | SoC has DPU: false
weston_1     | g2d implementation: viv
weston_1     | Switching to VT 7
weston_1     | Date: 2020-10-05 UTC
weston_1     | [18:51:18.345] weston 8.0.0
weston_1     |                https://wayland.freedesktop.org
weston_1     |                Bug reports to:
https://gitlab.freedesktop.org/wayland/weston/issues/
weston_1     |                Build: 8.0.0
weston_1     | [18:51:18.346] Command line: /usr/bin/weston
portainer_1  | 2020/10/05 18:51:17 Warning: the --template-file flag is
deprecated and will likely be removed in a future version of Portainer.
weston_1     | [18:51:18.347] OS: Linux,
5.4.61-5.0.0-devel+git.26abb5b86e17, #1-TorizonCore SMP Fri Oct 2
18:49:21 UTC 2020, armv7l
weston_1     | [18:51:18.352] Using config file
'/etc/xdg/weston-dev//weston.ini'
weston_1     | [18:51:18.356] Output repaint window is 7 ms maximum.
portainer_1  | 2020/10/05 18:51:19 Templates already registered inside
the database. Skipping template import.
weston_1     | [18:51:18.359] Loading module
'/usr/lib/arm-linux-gnueabihf/libweston-8/drm-backend.so'
weston_1     | [18:51:18.377] initializing drm backend
weston_1     | [18:51:18.381] logind: not running in a systemd session
weston_1     | [18:51:18.382] logind: cannot setup systemd-logind helper
(-61), using legacy fallback
portainer_1  | 2020/10/05 18:51:19 Instance alrea

--- a/debian-container/demonstration/docker-compose.armhf.yml
+++ b/debian-container/demonstration/docker-compose.armhf.yml
@@ -1,7 +1,8 @@
 version: "2.4"
 services:
+
   weston:
-    image: torizon/weston:1
+    image: torizon/weston:2
     # Required to get udev events from host udevd via netlink
     network_mode: host
     volumes:
@@ -26,11 +27,21 @@ services:
       - 'c 13:* rmw'
       # ... for /dev/dri devices
       - 'c 226:* rmw'
+    command: --developer weston-launch --tty=/dev/tty7 --user=torizon
+    healthcheck:
+        test: ["CMD", "test", "-S", "/tmp/.X11-unix/X0"]
+        interval: 5s
+        timeout: 4s
+        retries: 6
+        start_period: 10s
 
   portainer:
     image: portainer/portainer:latest
     # default user/password is admin/toradex2019
-    command: -H unix:///var/run/docker.sock --admin-password=$$2y$$05$$wUwPQ6QCd/Y5IB/JLPTYn.RVuyKozg7vlqDCGA6Z7WrL6b5jDLSby
+    command: -H unix:///var/run/docker.sock --admin-password '$$2y$$05$$lYD3omTmZ0c0jMDsNX6k8.GwS2NMHbbDzkMBWcDzBt6/K9EyuMPHi' --logo 'https://developer.toradex.com/images/logo_toradex_header.png'
+    network_mode: host
+    labels: 
+      - owner=acme
     ports:
       - 8840:9000
     volumes:
@@ -42,10 +53,15 @@ services:
         target: /var/run/docker.sock
 
   kiosk:
-    image: torizon/kiosk-mode-browser:1
+    image: torizon/kiosk-mode-browser:2
     security_opt:
       - seccomp:unconfined
     command: --window-mode http://portainer:8840
+    shm_size: '256mb'
+    device_cgroup_rules:
+      # ... for /dev/dri devices
+      - 'c 226:* rmw'
+    network_mode: host
     volumes:
       - type: bind
         source: /tmp
@@ -57,13 +73,10 @@ services:
         source: /dev/dri
         target: /dev/dri
     depends_on:
-      - portainer
-      - weston
-    shm_size: '256mb'
-    device_cgroup_rules:
-      # ... for /dev/dri devices
-      - 'c 226:* rmw'
- 
+      weston:
+        condition: service_healthy
+      portainer:
+        condition: service_started
 
 volumes:
   portainer_data:
