gpio/c arm64 adapted to Bullseye
In Apalis IMX8:

apalis-imx8-06548503:~$ uname -a
Linux apalis-imx8-06548503 5.4.47-5.0.0-devel+git.9e7307657fc1 #1-TorizonCore SMP PREEMPT Fri Oct 2 12:39:46 UTC 2020 aarch64 aarch64 aarch64 GNU/Linux
apalis-imx8-06548503:~$ docker run --rm -it --init --device /dev/gpiochip0 192.168.15.57:5000/samples-gpio-test-arm64:2
root@fb454b813c37:/# gpio-toggle 1 6
Setting pin to 1
Setting pin to 0
Setting pin to 1
Setting pin to 0
<...>

Related-to: TOR-1320

Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/gpio/c/Dockerfile.arm64
+++ b/gpio/c/Dockerfile.arm64
@@ -1,9 +1,9 @@
-ARG IMAGE_TAG=1-buster
+ARG IMAGE_TAG=2-bullseye
 # First stage, x86_64 build container
-FROM torizon/debian-cross-toolchain-arm64:1 AS cross-container
+FROM torizon/debian-cross-toolchain-arm64:2 AS cross-container
 
 # install the libpiod development dependencies
-RUN apt-get -y update && apt-get install -y \
+RUN apt-get -y update && apt-get -y upgrade && apt-get install -y \
     libgpiod-dev:arm64 \
     libgpiod2:arm64 \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
