gpio/bash adapted to Bullseye
Related-to: TOR-1320

Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/gpio/bash/Dockerfile.arm64
+++ b/gpio/bash/Dockerfile.arm64
@@ -1,4 +1,4 @@
-ARG IMAGE_TAG=1-buster
+ARG IMAGE_TAG=2-bullseye
 FROM --platform=linux/arm64 torizon/debian:$IMAGE_TAG
 
 RUN apt-get -y update && apt-get install -y \
