--- a/gps/python/Dockerfile
+++ b/gps/python/Dockerfile
@@ -1,5 +1,5 @@
 ARG IMAGE_ARCH=linux/arm
-ARG IMAGE_TAG=1-buster
+ARG IMAGE_TAG=2-bullseye
 FROM --platform=$IMAGE_ARCH torizon/debian:$IMAGE_TAG
 
 RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python3-setuptools && rm -rf /var/lib/apt/lists/*
