Move grafana to Debian Bullseye
- Document a quick setup
- Fix collectd/processes.so missing libmnl dependency

Sample execution in Colibri IMX6:

colibri-imx6-10508300:~/grafana$ uname -a
Linux colibri-imx6-10508300 5.4.61-5.0.0-devel+git.26abb5b86e17 #1-TorizonCore SMP Fri Oct 2 18:49:21 UTC 2020 armv7l armv7l armv7l GNU/Linux
colibri-imx6-10508300:~/grafana$ docker-compose -f docker-compose.yml up
Creating network "grafana_backend" with the default driver
Creating network "grafana_frontend" with the default driver
Creating collectd ... done
Creating influxdb ... done
Creating grafana  ... done
Attaching to influxdb, collectd, grafana
grafana     | t=2020-10-06T18:54:09+0000 lvl=info msg="Starting Grafana" logger=server version=6.7.1 commit=ca6d08d5cb branch=HEAD compiled=2020-03-20T13:13:09+0000
<...>
grafana     | t=2020-10-06T18:54:09+0000 lvl=info msg="HTTP Server Listen" logger=http.server address=[::]:3000 protocol=http subUrl= socket=

Related-to: TOR-1320

Signed-off-by: Rafael Lorandi <rafael.lorandi@toradex.com>

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,6 +1,7 @@
-ARG IMAGE_TAG=1-buster
+ARG IMAGE_TAG=2-bullseye
 FROM --platform=linux/arm torizon/debian:$IMAGE_TAG
 RUN apt-get -y update && apt-get install -y \
+    libmnl0 \
     collectd \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 CMD ["collectd","-f"]
